force-app/main/default/objects/Rubric_Criterion__mdt/Rubric_Criterion__mdt.object-meta.xml
<CustomObject>
    <label>Rubric Criterion</label>
    <pluralLabel>Rubric Criteria</pluralLabel>
</CustomObject>