force-app/main/default/objects/Rubric_Criterion__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <label>Active</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
    <description>Retire a criterion without deleting it.</description>
</CustomField>