force-app/main/default/objects/Rubric_Criterion__mdt/fields/Guidance__c.field-meta.xml
<CustomField>
    <fullName>Guidance__c</fullName>
    <label>Guidance</label>
    <type>Text</type>
    <length>255</length>
    <description>What good looks like for this criterion - fed to the model to anchor its judgment.</description>
</CustomField>