force-app/main/default/objects/Rubric_Criterion__mdt/fields/Weight__c.field-meta.xml
<CustomField>
    <fullName>Weight__c</fullName>
    <label>Weight</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>2</scale>
    <description>Relative importance of this criterion in the overall score.</description>
</CustomField>